[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "blueapi"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "Lightweight bluesky-as-a-service wrapper application. Also usable as a library."
dependencies = [
    "bluesky",
    "ophyd",
    "nslsii",
    "pyepics",
    "aioca",
    "pydantic>=2.0",
    "scanspec>=0.7.2",
    "pydantic-settings",
    "stomp-py",
    "aiohttp",
    "PyYAML>=6.0.2",
    "click",
    "fastapi>=0.112.0",
    "uvicorn",
    "requests",
    "dls-bluesky-core",     #requires ophyd-async
    "dls-dodal>=1.31.0",
    "super-state-machine",  # See GH issue 553
    "GitPython",
    "bluesky-stomp>=0.1.2",
]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "copier",
    "myst-parser>=4.0.0",
    "pipdeptree",
    "pre-commit>=3.8.0",
    "pydata-sphinx-theme>=0.15.4",
    "mypy",
    "pytest-cov",
    "pytest-asyncio",
    "responses",
    "ruff",
    "sphinx-autobuild>=2024.4.16",
    "sphinx-copybutton",
    "sphinx-click",
    "sphinx-design",
    "sphinxcontrib-openapi",
    "tox-direct",
    "types-mock",
    "types-PyYAML",
    "types-requests",
    "types-urllib3",
    "mock",
]

[project.scripts]
blueapi = "blueapi.cli:main"

[project.urls]
GitHub = "https://github.com/DiamondLightSource/blueapi"

[[project.authors]] # Further authors may be added by duplicating this section
email = "callum.forrester@diamond.ac.uk"
name = "Callum Forrester"


[tool.setuptools_scm]
write_to = "src/blueapi/_version.py"

[tool.mypy]
ignore_missing_imports = true # Ignore missing stubs in imported modules
namespace_packages = false    # rely only on __init__ files to determine fully qualified module names.

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --ignore=src/blueapi/startup
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = ["error", "ignore::DeprecationWarning"]
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"
asyncio_mode = "auto"

[tool.coverage.run]
data_file = "/tmp/blueapi.coverage"
omit = ["src/blueapi/startup/**/*"]

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

# tox must currently be configured via an embedded ini string
# See: https://github.com/tox-dev/tox/issues/999
[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist=True

[testenv:{pre-commit,type-checking,tests,docs,system-test}]
# Don't create a virtualenv for the command, requires tox-direct plugin
direct = True
passenv = *
allowlist_externals =
    pytest
    pre-commit
    mypy
    sphinx-build
    sphinx-autobuild
commands =
    pre-commit: pre-commit run --all-files {posargs}
    type-checking: mypy src tests {posargs}
    tests: pytest --cov=blueapi --cov-report term --cov-report xml:cov.xml tests/unit_tests {posargs}
    docs: sphinx-{posargs:build -EW --keep-going} -T docs build/html
    system-test: pytest tests/system_tests {posargs}
"""

[tool.ruff]
src = ["src", "tests"]
line-length = 88
lint.select = [
    "B",  # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4", # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "E",  # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",  # pyflakes rules - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "W",  # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "I",  # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "UP", # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Body",
    "fastapi.Task",
    "dls_bluesky_core.core.inject",
]
